--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "@types/turndown": "^5.0.5",
         "@types/uuid": "^10.0.0",
         "jest": "^30.0.5",
+        "license-checker": "^25.0.1",
         "ts-jest": "^29.4.1",
         "tsx": "^4.0.0",
         "typescript": "^5.0.0"
